[package]
name = "yangparse"
version = "0.1.0"
edition = "2021"
default-run = "yangparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.2.1"
regex = "1.7.3"
textwrap = "0.16"

[profile.release]
debug = true
